src/objects/PKB_Article_Feedback_Deflection__c.object
<CustomObject>
    <description>Stores data about feedback provided to an article and any customer deflection the article may have contributed to.</description>
    <fields>
        <fullName>ArticleCreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ArticleCreatedby</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PKB_Article_Deflection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ArticleLastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PKB_Article_Deflection1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Article_ID__c</fullName>
        <label>Article ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <description>Article author at the time that the PKB Deflection record is created</description>
        <inlineHelpText>Article author at the time that the PKB Deflection record is created</inlineHelpText>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Association_Count__c</fullName>
        <label>Case Association Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Channel on which the record has been created. Value can be Web or Mobile.</description>
        <inlineHelpText>Channel on which the record has been created.</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>web</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>7000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PKB Article Deflection</relationshipLabel>
        <relationshipName>PKB_Article_Deflection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deflection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deflection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_Addressed__c</fullName>
        <label>Feedback Addressed</label>
        <picklist>
            <picklistValues>
                <fullName>Will Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wont Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not About Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addressed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feedback_Source__c</fullName>
        <label>Feedback Source</label>
        <picklist>
            <picklistValues>
                <fullName>ContactUs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RelatedArticle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Keyword_Searched__c</fullName>
        <description>Keyword searched, if any, prior to the user entering this feedback or deflection.</description>
        <inlineHelpText>Keyword searched, if any, prior to the user entering this feedback or deflection.</inlineHelpText>
        <label>Keyword Searched</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Published_Date__c</fullName>
        <label>Last Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisibleInInternalApp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible in Internal App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleInPublicKnowledgebase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible in Public Knowledgebase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Why_Not_Helpful__c</fullName>
        <label>Why Not Helpful</label>
        <picklist>
            <picklistValues>
                <fullName>Was not able to follow instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Followed the instructions carefully, but didn&apos;t get expected outcome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough context provided or missing info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content seems outdated or incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original question was not answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not help, I&apos;m looking for help with a known issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t like this feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I have feedback about Bigcommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PKB Article Deflection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Deflection__c</columns>
        <columns>Comments__c</columns>
        <columns>Why_Not_Helpful__c</columns>
        <columns>Keyword_Searched__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Feedback_Addressed__c</columns>
        <columns>Case_Association_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>Knowledge_Editor</role>
            <role>Knowledge_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AFD-{0000000}</displayFormat>
        <label>PKB Article Feedback &amp; Deflection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PKB Article Deflection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>